--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_NAME: ADWebApplication
+  AZURE_WEBAPP_NAME: in5nite
   DOTNET_VERSION: '10.0.x'
   PROJECT_PATH: './ADWebApplication/ADWebApplication.csproj'
 
