--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -32,8 +32,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: >
           dotnet sonarscanner begin
-          /k:"AD-Project"
-          /o:"GDipSA-Team-5"
+          /k:"GDipSA-Team-5_AD-Project"   # project key
+          /o:"gdipsa-team-5"   # organisation key
           /d:sonar.host.url="https://sonarcloud.io"
           /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
 
