--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -11,7 +11,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: src
+        working-directory: ADWebApplication
 
     steps:
       # Step 1: Checkout source code
