--- a/.github/workflows/deploy-azure-webapp.yml
+++ b/.github/workflows/deploy-azure-webapp.yml
@@ -2,7 +2,7 @@ name: Build and deploy AD Project to Azure Web App
 
 on:
   workflow_run:
-    workflows: [ "CI with SonarCloud" ]
+    workflows: [ "CI with SonarCloud + SCA" ]
     types:
       - completed
   workflow_dispatch:
