--- a/.github/workflows/sast-sonarcloud.yml
+++ b/.github/workflows/sast-sonarcloud.yml
@@ -1,4 +1,4 @@
-name: CI with SonarCloud
+name: CI with SonarCloud + SCA
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 10.0.x   # or 7.0.x / 6.0.x
+          dotnet-version: 10.0.x
 
       # Step 3: Install SonarScanner for .NET
       - name: Install SonarScanner
@@ -59,11 +59,20 @@ jobs:
           /p:CoverletOutputFormat=opencover
           /p:CoverletOutput=./coverage.opencover.xml
 
-      # Step 8: End SonarCloud analysis
+      # Step 8a: End SonarCloud analysis
       - name: SonarCloud End
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: dotnet sonarscanner end
+      
+      # Step 8b: Upload SonarCloud artifacts
+      - name: Upload SonarCloud scan artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: sonarcloud-artifacts
+          path: |
+            ADWebApplication/.sonarqube/out
+            ADWebApplication/coverage.opencover.xml
 
       # Step 9: Quality Gate enforcement
       - name: SonarCloud Quality Gate
@@ -72,3 +81,25 @@ jobs:
           scanMetadataReportFile: ADWebApplication/.sonarqube/out/.sonar/report-task.txt
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # Step 10: OWASP Dependency-Check SCA
+      - name: Setup Java (required by Dependency-Check)
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      - name: Run OWASP Dependency-Check
+        uses: dependency-check/owasp-dependency-check-action@v2
+        with:
+          project: ADWebApplication
+          scan: ./        # scan project root
+          format: "HTML,XML"
+          failOnCVSS: 7   # fail CI for vulnerabilities with CVSS >= 7
+          out: ./dependency-check-report
+
+      - name: Upload Dependency-Check report
+        uses: actions/upload-artifact@v3
+        with:
+          name: dependency-check-report
+          path: ./dependency-check-report
