update SCA workflow

--- a/.github/workflows/sast-sonarcloud.yml
+++ b/.github/workflows/sast-sonarcloud.yml
@@ -84,20 +84,24 @@ jobs:
 
       # Step 10: OWASP Dependency-Check SCA
       - name: Run OWASP Dependency-Check SCA
-        id: dependency-check
-        run: |
-          dependency-check.sh --project ADWebApplication --scan ./ --format ALL --out ./dependency-check-report || echo "SCA failed"
-    
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: ADWebApplication
+          path: .
+          format: 'ALL'
+          out: ./dependency-check-report
+          args: --noupdate
+
       - name: Upload Dependency-Check report
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: ./dependency-check-report
 
-      - name: Fail if SCA found critical CVEs
-        if: always()
+      - name: Fail workflow on critical findings
         run: |
-          if grep -q "severity=\"Critical\"" ./dependency-check-report/dependency-check-report.xml; then
-            echo "Critical vulnerabilities found!"
+          CVSS_COUNT=$(grep -E "<cvssScore>[7-9]|10</cvssScore>" ./dependency-check-report/dependency-check-report.xml | wc -l)
+          if [ "$CVSS_COUNT" -gt 0 ]; then
+            echo "Found $CVSS_COUNT dependencies with CVSS >= 7. Failing workflow."
             exit 1
           fi
