update sca workflow

--- a/.github/workflows/sast-sonarcloud-sca-owasp.yml
+++ b/.github/workflows/sast-sonarcloud-sca-owasp.yml
@@ -93,7 +93,8 @@ jobs:
           args: >
             --exclude "./ADWebApplication.Tests/bin"
             --suppression dependency-check-suppressions.xml
-        continue-on-error: true   # ensures report is generated even if vulnerabilities exist
+            --disableFailOnEmpty  # ensures report is created even if no vulnerabilities
+        continue-on-error: true
 
       # Step 11: Upload Dependency-Check report
       - name: Upload Dependency-Check report
@@ -107,11 +108,14 @@ jobs:
         run: |
           REPORT_FILE=./dependency-check-report/dependency-check-report.xml
 
+          # Ensure report exists, create empty placeholder if needed
           if [ ! -f "$REPORT_FILE" ]; then
-            echo "Dependency-Check report not found. Continuing workflow."
-            exit 0
+            echo "Dependency-Check report not found. Creating empty report to ensure workflow success."
+            mkdir -p ./dependency-check-report
+            echo '<?xml version="1.0"?><analysis></analysis>' > "$REPORT_FILE"
           fi
 
+          # Count vulnerabilities with CVSSv3 base score >= 7
           HIGH_COUNT=$(xmllint --xpath "count(//vulnerability[number(cvssv3BaseScore) >= 7])" "$REPORT_FILE")
           
           if [ "$HIGH_COUNT" -gt 0 ]; then
@@ -119,5 +123,5 @@ jobs:
             exit 1
           else
             echo "No high CVSS vulnerabilities found. Workflow passes."
-            exit 0  # <-- ensure workflow ends as success
+            exit 0
           fi
