--- a/.github/workflows/sast-sonarcloud-sca-owasp.yml
+++ b/.github/workflows/sast-sonarcloud-sca-owasp.yml
@@ -82,29 +82,26 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      # Step 10: Install OWASP Dependency-Check
-      - name: Install OWASP Dependency-Check
-        run: |
-          curl -L -o dependency-check.zip https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.2/dependency-check-8.3.2-release.zip
-          unzip dependency-check.zip -d dependency-check
-          chmod +x dependency-check/bin/dependency-check.sh
+      # Step 10: Run OWASP Dependency-Check SCA
+      - name: Run OWASP Dependency-Check SCA
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: ADWebApplication
+          path: .
+          format: ALL
+          out: ./dependency-check-report
+          args: >
+            --exclude "./ADWebApplication.Tests/bin"
+            --suppression dependency-check-suppressions.xml
+            --disableFailOnEmpty
+            --failOnCVSS 7
+        continue-on-error: true
 
-      # Step 11: Run OWASP SCA Scan
-      - name: Run OWASP Dependency-Check Scan
-        continue-on-error: true   # Ensure subsequent step runs even if vulnerabilities exceed threshold
-        run: |
-          dependency-check/bin/dependency-check.sh \
-            --project "ADWebApplication" \
-            --scan . \
-            --format "ALL" \
-            --out "dependency-check-report" \
-            --failOnCVSS 7 \
-            --autoUpdate true
-
-      # Step 12: Upload SCA Report
-      - name: Upload SCA Report
-        if: always()   # Ensures the report is uploaded even if the previous step fails
+      # Step 11: Upload Dependency-Check report
+      - name: Upload Dependency-Check report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
-          path: dependency-check-report
+          path: ./dependency-check-report
+
