--- a/.github/workflows/sast-sonarcloud.yml
+++ b/.github/workflows/sast-sonarcloud.yml
@@ -91,6 +91,7 @@ jobs:
           format: 'ALL'
           out: ./dependency-check-report
           args: --failOnCVSS 7
+                --suppression dependency-check-suppressions.xml
 
       - name: Upload Dependency-Check report
         uses: actions/upload-artifact@v4
