Collector Dashboard, Admin Login, and Reporting

--- a/ADWebApplication/appsettings.json
+++ b/ADWebApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=in5nite-mysql-server.mysql.database.azure.com;Port=3306;Database=in5nite-database;User=znsnctclad;Password=P@ssword;SslMode=Required;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
