--- a/ADWebApplication/appsettings.json
+++ b/ADWebApplication/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=in5nite-mysql-server.mysql.database.azure.com;Port=3306;Database=in5nite-database;User Id=znsnctclad@in5nite-mysql-server;Password=P@ssword;SslMode=Required;"
+    "DefaultConnection": "Server=in5nite-mysql-server.mysql.database.azure.com;Port=3306;Database=in5nite-database;User Id=znsnctclad@in5nite-mysql-server;Password=P@ssword;SslMode=Required;TreatTinyAsBoolean=true;"
   },
   "EmailSettings":{
     "SmtpServer": "smtp.gmail.com",
