--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,9 @@ on:
     branches: [ main ]   # Run CI check on main pushes
   workflow_dispatch:     # Run CI check on manual trigger
 
+env:
+  DEPENDENCY_CHECK_VERSION: v9.0.7
+
 jobs:
   build-and-scan:
     runs-on: ubuntu-latest
@@ -31,38 +34,40 @@ jobs:
       - name: Add .NET global tools to PATH
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Sonar Scan
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Run Sonar Scan
         run: ./scripts/sast-sonar.sh
-      
-      - name: Install OWASP Dependency-Check CLI
+
+      - name: Upload Sonar Artifacts
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: sonar-report
+          path: .sonarqube/out
+
+      - name: Install OWASP Dependency-Check
         run: |
-          wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.5.1/dependency-check-8.5.1-release.zip
-          unzip dependency-check-8.5.1-release.zip
+          VERSION=${DEPENDENCY_CHECK_VERSION}
+
+          wget https://github.com/jeremylong/DependencyCheck/releases/download/${VERSION}/dependency-check-${VERSION#v}-release.zip
+          unzip dependency-check-*.zip
           chmod +x dependency-check/bin/dependency-check.sh
           sudo mv dependency-check/bin/dependency-check.sh /usr/local/bin/dependency-check.sh
 
-      - name: Dependency Check
+      - name: Run Dependency Check
         run: ./scripts/sca-dependency-check.sh
 
-      - name: Local DAST Scan
-        run: ./scripts/dast-zap.sh
-
-      # Artifact uploads
-      - name: Upload Test Coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-coverage
-          path: ADWebApplication.Tests/TestResults/**/coverage.cobertura.xml
-
       - name: Upload Dependency Check Report
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: ./dependency-check-report
 
+      - name: Local DAST Scan
+        run: ./scripts/dast-zap.sh
+
       - name: Upload ZAP DAST Report
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
