--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,8 +49,10 @@ jobs:
           wget https://github.com/jeremylong/DependencyCheck/releases/download/${VERSION}/dependency-check-${VERSION#v}-release.zip
           unzip dependency-check-*.zip
           chmod +x dependency-check/bin/dependency-check.sh
+          # Move to a stable location
           sudo mv dependency-check /usr/local/dependency-check
-          sudo ln -s /usr/local/dependency-check/bin/dependency-check /usr/local/bin/dependency-check
+          # Add binary folder to PATH for the remaining steps
+          echo "/usr/local/dependency-check/bin" >> $GITHUB_PATH
 
       - name: Cache Dependency-Check DB
         uses: actions/cache@v3
@@ -60,15 +62,16 @@ jobs:
           restore-keys: |
             dependency-check-db-${{ runner.os }}-v1
 
-      - name: Run Dependency Check
+      - name: Run Dependency-Check SCA
         run: ./scripts/sca-dependency-check.sh
         env:
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
 
-      - name: Upload Dependency Check Report
+      - name: Upload Dependency-Check Report
         if: success()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: ./dependency-check-report
+
 
