--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,30 +43,44 @@ jobs:
           path: .sonarqube/out
           if-no-files-found: warn
 
-      - name: Install OWASP Dependency-Check
-        run: |
-          VERSION=${DEPENDENCY_CHECK_VERSION}
-          wget https://github.com/jeremylong/DependencyCheck/releases/download/${VERSION}/dependency-check-${VERSION#v}-release.zip
-          unzip dependency-check-*.zip
-          chmod +x dependency-check/bin/dependency-check.sh
-          sudo mv dependency-check /usr/local/dependency-check
-          echo "/usr/local/dependency-check/bin" >> $GITHUB_PATH
+      #- name: Install OWASP Dependency-Check
+      #  run: |
+      #    VERSION=${DEPENDENCY_CHECK_VERSION}
+      #    wget https://github.com/jeremylong/DependencyCheck/releases/download/${VERSION}/dependency-check-${VERSION#v}-release.zip
+      #    unzip dependency-check-*.zip
+      #    chmod +x dependency-check/bin/dependency-check.sh
+      #    sudo mv dependency-check /usr/local/dependency-check
+      #    echo "/usr/local/dependency-check/bin" >> $GITHUB_PATH
 
-      - name: Cache Dependency-Check DB
-        uses: actions/cache@v3
+      #- name: Cache Dependency-Check DB
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: ./dependency-check-data
+      #    key: dependency-check-db-'$'{{ runner.os }}-v1
+      #    restore-keys: |
+      #      dependency-check-db-'$'{{ runner.os }}-v1
+
+      #- name: Run Dependency-Check SCA
+      #  run: ./scripts/sca-dependency-check.sh
+      #  env:
+      #    NVD_API_KEY: '$'{{ secrets.NVD_API_KEY }}
+
+      
+      # ---- OWASP Dependency-Check ----
+      - name: Run OWASP Dependency-Check SCA
+        uses: dependency-check/Dependency-Check_Action@1e54355a8b4c8abaa8cc7d0b70aa655a3bb15a6c
         with:
-          path: ./dependency-check-data
-          key: dependency-check-db-${{ runner.os }}-v1
-          restore-keys: |
-            dependency-check-db-${{ runner.os }}-v1
+          project: ADWebApplication
+          path: .
+          format: ALL
+          out: ./dependency-check-report
+          args: >
+            --failOnCVSS 7
+            --suppression dependency-check-suppressions.xml
+            --exclude '**/test/**'
 
-      - name: Run Dependency-Check SCA
-        run: ./scripts/sca-dependency-check.sh
-        env:
-          NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
-
-      - name: Upload Dependency-Check Report
-        if: success()
+      - name: Upload Dependency-Check report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
