--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,8 +1,8 @@
-name: CD - Deploy to Azure and Run ZAP DAST
+name: CD - Deploy to Azure and Run OWASP ZAP DAST
 
 on:
   workflow_run:
-    workflows: ["CI - SonarCloud + OWASP Dependency-Check"]
+    workflows: ["CI - SonarCloud SAST + OWASP Dependency-Check SCA"]
     types:
       - completed
 
