--- a/.github/workflows/CI-Branch-SonarQube-OWasp.yml
+++ b/.github/workflows/CI-Branch-SonarQube-OWasp.yml
@@ -63,7 +63,9 @@ jobs:
       - name: Test with Coverage
         run: |
           dotnet test ./ADWebApplication.Tests/ADWebApplication.Tests.csproj \
-            --collect:"XPlat Code Coverage"
+            --collect:"XPlat Code Coverage" \
+            --settings coverlet.runsettings \
+            --results-directory ./TestResults
 
       - name: Debug coverage files
         run: find . -name "coverage.cobertura.xml"
