add test cases for collector assignment service

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,3 @@
 sonar.exclusions=**/.github/workflows/CI-CD-SonarQube-OWasp-DC-ZAP.yml
 sonar.coverage.exclusions=**/Models/Entities/**,**/Models/DTOs/**
+sonar.coverage.exclusions=**/Models/**,**/ViewModels/**,**/*VM.cs
